# FleetFix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint-test.yml.disabled
installer/: install.sh
src/fleetfix/: __init__.py  __main__.py  app.py  config.py  privilege.py
src/fleetfix/audit/: logger.py  otel.py
src/fleetfix/modules/disk/: blacklist.py  ghost.py  inodes.py  smart.py  usage.py
src/fleetfix/modules/docker/: dashboard.py  hygiene.py  truncate.py
src/fleetfix/modules/log_squeeze/: gzip_inplace.py
src/fleetfix/modules/network/: curl_probe.py  dns.py  interfaces.py  ping.py  sockets.py
src/fleetfix/modules/procs/: killer.py  ranker.py
src/fleetfix/modules/services/: boot.py  failed.py  journal.py
src/fleetfix/modules/storage/: env_check.py  safe_delete.py  stale.py  tree.py
src/fleetfix/modules/system/: metrics.py  thermal.py  updates.py
src/fleetfix/screens/: audit_log.py  confirm.py  dashboard.py  disk.py  docker.py  network.py  placeholder.py  processes.py  services.py  storage.py
src/fleetfix/updater/: checker.py  cli.py  installer.py
src/fleetfix/widgets/: nav.py  topbar.py
tests/e2e/: conftest.py  test_app_shell.py  test_audit_view.py  test_confirm_modal.py  test_disk_view.py  test_docker_view.py  test_network_view.py  test_processes_view.py  test_services_view.py  test_storage_view.py  test_topbar_target.py  test_update_action.py
tests/unit/: test_app_inspect_target.py  test_audit_logger.py  test_audit_otel.py  test_blacklist.py  test_curl_probe.py  test_disk_usage.py  test_dns.py  test_docker_dashboard.py  test_docker_hygiene.py  test_docker_truncate.py  test_env_check.py  test_ghost.py  test_inodes.py  test_inspect_target.py  test_killer.py  test_log_squeeze.py  test_network_interfaces.py  test_ping.py  test_privilege.py  test_ranker.py  test_safe_delete.py  test_services_boot.py  test_services_failed.py  test_services_journal.py  test_smart.py  test_smoke.py  test_sockets.py  test_stale.py  test_system_metrics.py  test_tree.py  test_updater_checker.py  test_updater_cli.py  test_updater_installer.py  test_updates.py
